syntax = "proto3";
package apis;
option go_package = "apis/apipb";

message UnaryRequest {
    string reqMsg = 1;
}

message UnaryResponse {
    string respMsg = 1;
}

message ClientStreamRequest {
    int32 num = 1;
}

message ClientStreamResponse {
    int32 max = 1;
    int32 min = 2;
    float average = 3;
}

message ServerStreamRequest {
    int32 fibonum = 1;
}

message ServerStreamResponse {
    int32 fibonacy = 1;
    int32 fibopos = 2;
}

message BidirectionRequest {
    int32 num = 1;
}

message BidirectionResponse {
    int32 max = 1;
    int32 min = 2;
}

service AipsService {

    rpc Unary(UnaryRequest) returns (UnaryResponse);
    rpc ClientStream(stream ClientStreamRequest) returns (ClientStreamResponse);
    rpc ServerStream(ServerStreamRequest) returns (stream ServerStreamResponse);
    rpc Bidirection(stream BidirectionRequest) returns (stream BidirectionResponse);
    rpc UnaryWidthDeadline(UnaryRequest) returns (UnaryResponse);
    rpc ErrorHandle(UnaryRequest) returns (UnaryResponse);
}